<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.thumbwars.game.android.DiscoveryActivity"
    android:id="@+id/rlDiscovery">

    <TextView android:text="@string/discovery" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtDiscovery" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host"
        android:id="@+id/btnCrear"
        android:layout_below="@+id/txtDiscovery"
        android:layout_alignLeft="@+id/btnBuscarHost"
        android:layout_alignStart="@+id/btnBuscarHost"
        android:layout_alignRight="@+id/btnUnirse"
        android:layout_alignEnd="@+id/btnUnirse" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unirse"
        android:id="@+id/btnUnirse"
        android:layout_above="@+id/txtNombre"
        android:layout_toLeftOf="@+id/btnSiguiente"
        android:layout_toStartOf="@+id/btnSiguiente" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtRespuesta"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:id="@+id/btnBuscarHost"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnUnirse"
        android:layout_alignStart="@+id/btnUnirse"
        android:layout_alignRight="@+id/btnUnirse"
        android:layout_alignEnd="@+id/btnUnirse" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:id="@+id/btnSiguiente"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Jugador"
        android:ems="10"
        android:id="@+id/txtNombre"
        android:layout_above="@+id/btnBuscarHost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Equipo"
        android:id="@+id/switch1"
        android:layout_below="@+id/txtNombre"
        android:layout_alignRight="@+id/txtNombre"
        android:layout_alignEnd="@+id/txtNombre"
        android:checked="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtJugador"
        android:layout_above="@+id/btnSiguiente"
        android:layout_toRightOf="@+id/txtRespuesta"
        android:layout_toEndOf="@+id/txtRespuesta"
        android:layout_marginBottom="38dp"
        android:text="1"
        android:width="50dp" />

</RelativeLayout>
